<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">My Favorite Movies</string>
    <string name="add_movie">Add Movie</string>
    <string name="edit">Edit</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="show__list_by_year">Show List by Year</string>
    <string name="show_list_by_rating">Show List by Rating</string>
    <string name="text_movie_name">Name:</string>
    <string name="add_description">Description:</string>
    <string name="add_genre">Genre:</string>
    <string name="add_rating">Rating</string>
    <string name="spineer_select">Select</string>
    <string name="add_year">Year:</string>
    <string name="add_IMDB">IMDB:</string>
    <string name="save_changes">Save Changes</string>
    <string name="movies__by_year">Movies by Year</string>
    <string name="title">Title</string>
    <string name="finish">Fnish</string>
    <string name="btfirst"><![CDATA[|<]]></string>
    <string name="btprev"><![CDATA[<]]></string>
    <string name="btnext"><![CDATA[>]]></string>
    <string name="btlast"><![CDATA[>|]]></string>
    <string name="moviesbyrating">Movies by Rating</string>
    <string name="moviesByyear">Movies by Year</string>
    <string name="rate" />
    <string name="rate1" />

    <string-array name="genre_array">
        <item>Action</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Documentary</item>
        <item>Family</item>
        <item>Horror</item>
        <item>Crime</item>
        <item>Others</item>
    </string-array>

</resources>
